RGB LED Matrix with FFM API (WIP)